--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Launch CSTG (Chrome)",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:9090",
+      "url": "http://localhost:9090?pbjs_debug=true",
       "webRoot": "${workspaceRoot}/",
       "sourceMaps": true,
       "preLaunchTask": "Start CSTG",
